--- a/ivy.xml
+++ b/ivy.xml
@@ -10,10 +10,10 @@
 	
 	<dependencies>
 
+		<dependency org="it.unimi.di" name="jsap" rev="20210129"/>
 		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.30" force="true"/>
 		<dependency org="it.unimi.dsi" name="fastutil" rev="latest.release" />
 		<dependency org="it.unimi.dsi" name="dsiutils" rev="latest.release" />
-		<dependency org="com.martiansoftware" name="jsap" rev="latest.release"/>
 		<dependency org="it.unimi.dsi" name="webgraph" rev="latest.release" />
 		<dependency org="it.unimi.dsi" name="sux4j" rev="latest.release" />
 		<dependency org="junit" name="junit" rev="latest.release" conf="test"/>
