Update bidirectional immutable graph

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-version=3.6.6
+version=3.6.7
 
 jar.base=/usr/share/java
 javadoc.base=/usr/share/javadoc
@@ -14,10 +14,10 @@ build=build
 instrumented=instr
 
 j2se.apiurl=https://docs.oracle.com/javase/9/docs/api/
-fastutil.apiurl=http://fastutil.di.unimi.it/docs/
-webgraph.apiurl=http://webgraph.di.unimi.it/docs/
-dsiutils.apiurl=http://dsiutils.di.unimi.it/docs/
-sux4j.apiurl=http://sux4j.di.unimi.it/docs/
+fastutil.apiurl=https://fastutil.di.unimi.it/docs/
+webgraph.apiurl=https://webgraph.di.unimi.it/docs/
+dsiutils.apiurl=https://dsiutils.di.unimi.it/docs/
+sux4j.apiurl=https://sux4j.di.unimi.it/docs/
 jsap.apiurl=http://www.martiansoftware.com/jsap/doc/javadoc/
 junit.apiurl=https://junit.org/junit4/javadoc/latest/
-slf4j.apiurl=http://www.slf4j.org/apidocs/
+slf4j.apiurl=https://www.slf4j.org/apidocs/
